// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<div
  className="src-shared-components-Dashboard-SRM-___SRMTile__srm___I1CVf src-shared-components-Dashboard-SRM-___SRMTile__tile-view___5tLR4"
>
  <div>
    <div
      className="src-shared-components-Dashboard-SRM-___SRMTile__challenge-track___cOiWF"
    />
    <header>
      <a
        className="src-shared-components-Dashboard-SRM-___SRMTile__noclick___1BNmM"
      />
    </header>
    <div
      className="src-shared-components-Dashboard-SRM-___SRMTile__srm-details___y7yAS"
    >
      <p
        className="src-shared-components-Dashboard-SRM-___SRMTile__starts-in___3K3um"
      >
        Starts in
         
        <span>
          1d
                  1d
        </span>
      </p>
      <div
        className="src-shared-components-Dashboard-SRM-___SRMTile__srm-calendar___2FgV1"
      >
        <span
          className="src-shared-components-Dashboard-SRM-___SRMTile__day___QfuZ0"
        >
          31
        </span>
        <span
          className="src-shared-components-Dashboard-SRM-___SRMTile__month___19R97"
        >
          Dec
        </span>
        <span
          className="src-shared-components-Dashboard-SRM-___SRMTile__hour___2JoEY"
        >
          08:00 am
        </span>
        <span
          className="src-shared-components-Dashboard-SRM-___SRMTile__time-zone___3c317"
        >
          UTC
          2019-12-31T08:00:00.000Z
        </span>
      </div>
    </div>
    <div
      className="src-shared-components-Dashboard-SRM-___SRMTile__phase-status___1kQqL"
    >
      <div
        className="src-shared-components-Dashboard-SRM-___SRMTile__registered___r_ywE"
      >
        Registered
      </div>
    </div>
  </div>
</div>
`;

exports[`Matches shallow shapshot 2`] = `
<div
  className="src-shared-components-Dashboard-SRM-___SRMTile__srm___I1CVf src-shared-components-Dashboard-SRM-___SRMTile__tile-view___5tLR4"
>
  <div>
    <div
      className="src-shared-components-Dashboard-SRM-___SRMTile__challenge-track___cOiWF"
    />
    <header>
      <a
        className="src-shared-components-Dashboard-SRM-___SRMTile__noclick___1BNmM"
      />
    </header>
    <div
      className="src-shared-components-Dashboard-SRM-___SRMTile__srm-details___y7yAS"
    >
      <p
        className="src-shared-components-Dashboard-SRM-___SRMTile__starts-in___3K3um"
      >
        Starts in
         
        <span>
          1d
                  1d
        </span>
      </p>
      <div
        className="src-shared-components-Dashboard-SRM-___SRMTile__srm-calendar___2FgV1"
      >
        <span
          className="src-shared-components-Dashboard-SRM-___SRMTile__day___QfuZ0"
        >
          31
        </span>
        <span
          className="src-shared-components-Dashboard-SRM-___SRMTile__month___19R97"
        >
          Dec
        </span>
        <span
          className="src-shared-components-Dashboard-SRM-___SRMTile__hour___2JoEY"
        >
          08:00 am
        </span>
        <span
          className="src-shared-components-Dashboard-SRM-___SRMTile__time-zone___3c317"
        >
          UTC
          2019-12-31T08:00:00.000Z
        </span>
      </div>
    </div>
    <div
      className="src-shared-components-Dashboard-SRM-___SRMTile__phase-status___1kQqL"
    >
      <div>
        <a
          className="tc-btn tc-btn-s tc-btn-wide src-shared-components-Dashboard-SRM-___SRMTile__tc-btn___g5Zmz"
          href="https://community.topcoder-dev.com/tc?module=MatchDetails&rd=1"
        >
          Register
        </a>
      </div>
    </div>
  </div>
</div>
`;
